--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Unreleased Talk from 2004 – The Pain of Ignorance | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">19 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Candlestick Pattern Is Not Enough, Here's Why...</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">49 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Backtesting: Why Short Tests Harm Real-Time Performance #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>DeMarker Indicator Strategy</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Shedding the Ego</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>My Biggest Golf Swing Discovery: "If I knew this years ago I would be on tour"</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>How I Pass Prop Firm Challenges and Get Funded (the5ers)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -420,7 +420,7 @@
                     <div class="video-info">
                         <h3>Why Schopenhauer Hated Life</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -882,7 +882,7 @@
                     <div class="video-info">
                         <h3>Why the Stock Market Is Like a Lottery?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>Candlestick Pattern Is Not Enough, Here's Why...</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">49 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5096,7 +5096,7 @@
                         <div class="video-info">
                             <h3>Backtesting: Why Short Tests Harm Real-Time Performance #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5107,7 +5107,7 @@
                         <div class="video-info">
                             <h3>DeMarker Indicator Strategy</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5129,7 +5129,7 @@
                         <div class="video-info">
                             <h3>How I Pass Prop Firm Challenges and Get Funded (the5ers)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5360,7 +5360,7 @@
                         <div class="video-info">
                             <h3>Why the Stock Market Is Like a Lottery?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>Unreleased Talk from 2004 – The Pain of Ignorance | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">19 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7253,7 +7253,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Shedding the Ego</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7352,7 +7352,7 @@
                         <div class="video-info">
                             <h3>Why Schopenhauer Hated Life</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9405,7 +9405,7 @@
                         <div class="video-info">
                             <h3>My Biggest Golf Swing Discovery: "If I knew this years ago I would be on tour"</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
