--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>You won't stop Reform by calling their supporters racist</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">9 minutes ago</div>
+                        <div class="date">16 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -136,7 +136,7 @@
                         <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">23 minutes ago</div>
+                        <div class="date">30 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -149,7 +149,7 @@
                         <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">24 minutes ago</div>
+                        <div class="date">31 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -160,7 +160,7 @@
                     <div class="video-info">
                         <h3>Uncovering the Wakefulness Within You | Eckhart Tolle on The Paradox of Time (Part 3)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">42 minutes ago</div>
+                        <div class="date">49 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -204,7 +204,7 @@
                     <div class="video-info">
                         <h3>DeMarker Indicator Strategy</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -875,7 +875,7 @@
                     <div class="video-info">
                         <h3>POV Spaghetti Amatriciana 🍝👨‍🍳 #chef #pasta #pov</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5089,7 +5089,7 @@
                         <div class="video-info">
                             <h3>You won't stop Reform by calling their supporters racist</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">9 minutes ago</div>
+                            <div class="date">16 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5102,7 +5102,7 @@
                             <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">23 minutes ago</div>
+                            <div class="date">30 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5115,7 +5115,7 @@
                             <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">24 minutes ago</div>
+                            <div class="date">31 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5148,7 +5148,7 @@
                         <div class="video-info">
                             <h3>DeMarker Indicator Strategy</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7250,7 +7250,7 @@
                         <div class="video-info">
                             <h3>Uncovering the Wakefulness Within You | Eckhart Tolle on The Paradox of Time (Part 3)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">42 minutes ago</div>
+                            <div class="date">49 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -8802,7 +8802,7 @@
                         <div class="video-info">
                             <h3>POV Spaghetti Amatriciana 🍝👨‍🍳 #chef #pasta #pov</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
