--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">2 minutes ago</div>
+                        <div class="date">21 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -136,7 +136,7 @@
                     <div class="video-info">
                         <h3>How to Start with the5ers (Full Setup Guide)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">7 minutes ago</div>
+                        <div class="date">26 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -147,7 +147,7 @@
                     <div class="video-info">
                         <h3>You won't stop Reform by calling their supporters racist</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">36 minutes ago</div>
+                        <div class="date">55 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -224,7 +224,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 10</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -235,7 +235,7 @@
                     <div class="video-info">
                         <h3>There is no need to control you  mind. Your mind needs liberation. | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -257,7 +257,7 @@
                     <div class="video-info">
                         <h3>#Throwback Sadhguru Brings Devi to Life on Canvas</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -763,7 +763,7 @@
                     <div class="video-info">
                         <h3>Your Life Is Now, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1412,7 +1412,7 @@
                     <div class="video-info">
                         <h3>[LIVE ACCOUNT] Forex & CFD Expert Advisor Livetrading (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5089,7 +5089,7 @@
                             <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">2 minutes ago</div>
+                            <div class="date">21 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5100,7 +5100,7 @@
                         <div class="video-info">
                             <h3>How to Start with the5ers (Full Setup Guide)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">7 minutes ago</div>
+                            <div class="date">26 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5111,7 +5111,7 @@
                         <div class="video-info">
                             <h3>You won't stop Reform by calling their supporters racist</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">36 minutes ago</div>
+                            <div class="date">55 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5155,7 +5155,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 10</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5661,7 +5661,7 @@
                         <div class="video-info">
                             <h3>[LIVE ACCOUNT] Forex & CFD Expert Advisor Livetrading (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7279,7 +7279,7 @@
                         <div class="video-info">
                             <h3>There is no need to control you  mind. Your mind needs liberation. | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7290,7 +7290,7 @@
                         <div class="video-info">
                             <h3>#Throwback Sadhguru Brings Devi to Life on Canvas</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7499,7 +7499,7 @@
                         <div class="video-info">
                             <h3>Your Life Is Now, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
