--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -136,7 +136,7 @@
                     <div class="video-info">
                         <h3>How to Start with the5ers (Full Setup Guide)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -158,7 +158,7 @@
                     <div class="video-info">
                         <h3>Uncovering the Wakefulness Within You | Eckhart Tolle on The Paradox of Time (Part 3)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -169,7 +169,7 @@
                     <div class="video-info">
                         <h3>Unreleased Talk from 2004 – The Pain of Ignorance | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -213,7 +213,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Shedding the Ego</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2276,7 +2276,7 @@
                     <div class="video-info">
                         <h3>Proof: Mean Reversion Outperforms 90% of Breakout Systems</h3>
                         <div class="channel">The Transparent Trader</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Aug 31, 2025</div>
                     </div>
                 </a>
             </div>
@@ -2287,7 +2287,7 @@
                     <div class="video-info">
                         <h3>What Makes the Pizza, The Best!?</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Aug 31, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5089,7 +5089,7 @@
                             <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5100,7 +5100,7 @@
                         <div class="video-info">
                             <h3>How to Start with the5ers (Full Setup Guide)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -6041,7 +6041,7 @@
                         <div class="video-info">
                             <h3>Proof: Mean Reversion Outperforms 90% of Breakout Systems</h3>
                             <div class="channel">The Transparent Trader</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Aug 31, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -7246,7 +7246,7 @@
                         <div class="video-info">
                             <h3>Uncovering the Wakefulness Within You | Eckhart Tolle on The Paradox of Time (Part 3)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7257,7 +7257,7 @@
                         <div class="video-info">
                             <h3>Unreleased Talk from 2004 – The Pain of Ignorance | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7268,7 +7268,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Shedding the Ego</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9073,7 +9073,7 @@
                         <div class="video-info">
                             <h3>What Makes the Pizza, The Best!?</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Aug 31, 2025</div>
                         </div>
                     </a>
                 </div>
